--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    <color name="purple_700">#FF3700B3</color>-->
+<!--    <color name="teal_200">#FF03DAC5</color>-->
+<!--    <color name="teal_700">#FF018786</color>-->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="jacksonmed_white">#eff9f0</color>
-    <color name="jacksonmed_blue">#29abe3</color>
-    <color name="jacksonmed_purple">#2f3192</color>
-    <color name="jacksonmed_gray">#666</color>
-    <color name="jacksonmed_black">#342F37</color>
+    <color name="primary">#29abe3</color>
+    <color name="primary_transparent">#990474A4</color>
+    <color name="primary_variant">#0474A4</color>
+    <color name="primary_light">#4FBAE8</color>
+    <color name="secondary">#FFA070</color>
+    <color name="secondary_variant">#FF8547</color>
+    <color name="secondary_light">#FFC9AD</color>
+    <color name="purple">#2f3192</color>
+    <color name="gray">#666</color>
+    <color name="menu_bar_dark">#121212</color>
 </resources>
