--- a/app/src/main/res/layout/fragment_bed.xml
+++ b/app/src/main/res/layout/fragment_bed.xml
@@ -56,6 +56,17 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <Switch
+                    android:id="@+id/bedStatusSwitch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="60dp"
+                    android:layout_marginBottom="24dp"
+                    android:minHeight="48dp"
+                    android:text="Switch"
+                    app:layout_constraintBottom_toTopOf="@+id/buttonBedStatus"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
                 <Button
                     android:id="@+id/buttonBedStatus"
                     android:layout_width="wrap_content"
